--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -4,7 +4,7 @@
   <p><%= I18n.t('releases.index') %></p>
 </div>
 <% if @releases.present? %>
-  <table class="table table-hover table-responsive">
+  <table class="table table-hover">
   <thead>
     <tr>
       <th><%= I18n.t('releases.date') %></th>
@@ -21,16 +21,16 @@
   </thead>
   <tbody>
   <% @releases.each do |release| %>
-    <tr data-link='<%= release_path(release) %>' <%= release == @next_release ? "class=next_release" : "class=foo" %>>
+    <tr data-link='<%= release_path(release) %>' class = "table_data <%= if release == @next_release then "next_release" end %>">
       <td><%= release.date %></td>
-      <td <%= release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', release) %></td>
-      <td <%= release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', release) %></td>
-      <td <%= release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', release) %></td>
-      <td <%= release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', release) %></td>
-      <td <%= release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', release) %></td>
-      <td <%= release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', release) %></td>
-      <td <%= release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', release) %></td>
-      <td><%= release.status %></span></td>
+      <td class="<%= release.mysageone.present? ? "new-version" : "previous-version" %>"><%= Release.version('mysageone', release) %></td>
+      <td class="<%= release.accounts.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts', release) %></td>
+      <td class="<%= release.accounts_extra.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts_extra', release) %></td>
+      <td class="<%= release.payroll.present? ? "new-version" : "previous-version" %>"><%= Release.version('payroll', release) %></td>
+      <td class="<%= release.addons.present? ? "new-version" : "previous-version" %>"><%= Release.version('addons', release) %></td>
+      <td class="<%= release.collaborate.present? ? "new-version" : "previous-version" %>"><%= Release.version('collaborate', release) %></td>
+      <td class="<%= release.help.present? ? "new-version" : "previous-version" %>"><%= Release.version('help', release) %></td>
+      <td><%= ['UAT','Pre-Prod'].include?(release.status) && release.date < Date.today ? release.status + "?" : release.status %></td>
     </tr>
 <% end %>
   </tbody>
@@ -38,10 +38,11 @@
 <% else %>
   <p><%= I18n.t('releases.empty') %></p>
 <% end %>
-
+<div class='form-actions'>
 <%= link_to t('.new', :default => t("helpers.links.new")),
   new_release_path,
   :class => 'btn btn-primary' %>
+</div>
 
 <center><%= paginate @releases, :html_options => {:class => "pagination"} %></center>
 
