--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -3,39 +3,43 @@
   <h1><%=t '.title', :default => @release.date %></h1>
 </div>
 
-<div>
-<dl class="dl-horizontal-left">
-  <dt><strong><%= I18n.t('releases.date') %>:</strong></dt>
-  <dd><%= @release.date %></dd>
-  <dt><strong><%= I18n.t('releases.status') %>:</strong></dt>
-  <dd><%= @release.status %></dd>
-  <dt><strong><%= I18n.t('app.mysageone') %>:</strong></dt>
-  <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %></dd>
-  <dt><strong><%= I18n.t('app.accounts') %>:</strong></dt>
-  <dd <%= @release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @release) %></dd>
-  <dt><strong><%= I18n.t('app.accounts_extra') %>:</strong></dt>
-  <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %></dd>
-  <dt><strong><%= I18n.t('app.payroll') %>:</strong></dt>
-  <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %></dd>
-  <dt><strong><%= I18n.t('app.addons') %>:</strong></dt>
-  <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %></dd>
-  <dt><strong><%= I18n.t('app.collaborate') %>:</strong></dt>
-  <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %></dd>
-  <dt><strong><%= I18n.t('app.help') %>:</strong></dt>
-  <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %></dd>
-  <dt><strong><%= I18n.t('releases.notes') %>:</strong></dt>
-  <dd><%= markdown(@release.notes) %></dd>
-</dl>
+<div class="row">
+  <div class="span5">
+    <dl class="dl-horizontal-left">
+      <dt><strong><%= I18n.t('releases.date') %>:</strong></dt>
+      <dd><%= @release.date %></dd>
+      <dt><strong><%= I18n.t('releases.status') %>:</strong></dt>
+      <dd><%= @release.status %></dd>
+      <dt><strong><%= I18n.t('app.mysageone') %>:</strong></dt>
+      <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %></dd>
+      <dt><strong><%= I18n.t('app.accounts') %>:</strong></dt>
+      <dd <%= @release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @release) %></dd>
+      <dt><strong><%= I18n.t('app.accounts_extra') %>:</strong></dt>
+      <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %></dd>
+      <dt><strong><%= I18n.t('app.payroll') %>:</strong></dt>
+      <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %></dd>
+      <dt><strong><%= I18n.t('app.addons') %>:</strong></dt>
+      <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %></dd>
+      <dt><strong><%= I18n.t('app.collaborate') %>:</strong></dt>
+      <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %></dd>
+      <dt><strong><%= I18n.t('app.help') %>:</strong></dt>
+      <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %></dd>
+    </dl>
+  </div>
+  <div class="span7">
+    <div class="notes">
+    <%= @release.notes.present? ? markdown(@release.notes) : "There are no notes for this release. Check back later." %>
+  </div>
+  </div>
 </div>
-<br />
 <div class="form-actions">
-<%= link_to t('.back', :default => t("helpers.links.back")),
-            releases_path, :class => 'btn'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-            edit_release_path(@release), :class => 'btn' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-            release_path(@release),
-            :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+    releases_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+    edit_release_path(@release), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+    release_path(@release),
+    :method => 'delete',
+    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+    :class => 'btn btn-danger' %>
 </div>
