--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -8,6 +8,8 @@
     <dl class="dl-horizontal-left">
       <dt><strong><%= I18n.t('releases.date') %>:</strong></dt>
       <dd><%= @release.date %></dd>
+      <dt><strong><%= I18n.t('releases.coordinator') %>:</strong></dt>
+      <dd><%= @release.coordinator %></dd>
       <dt><strong><%= I18n.t('releases.status') %>:</strong></dt>
       <dd><%= @release.status %></dd>
       <dt><strong><%= I18n.t('app.mysageone') %>:</strong></dt>
