--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title><%= content_for?(:title) ? yield(:title) : "VersionKeeper" %></title>
-<%= csrf_meta_tags %>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "VersionKeeper" %></title>
+    <%= csrf_meta_tags %>
 
-<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-<!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-<%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
 
-<%= javascript_include_tag "application" %>
-</head>
-<body>
+    <%= javascript_include_tag "application" %>
+  </head>
+  <body> 
 
-<div class="container span12">
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-          <a class="brand" href="/">VersionKeeper</a>
-          <ul class="nav pull-right">
-          </ul>
+
+    <div class="container span12">
+      <div class="navbar navbar-fixed-top">
+    <a href="https://github.com/adamgeorgeson/versionkeeper"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="brand" href="/">VersionKeeper</a>
+            <ul class="nav pull-right">
+              <button type="button" class="btn btn-default"><a href="https://github.com/adamgeorgeson/versionkeeper/issues">Request a change?</a></button>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="span12">
-      <%= bootstrap_flash %>
-      <%= yield %>
-    </div>
-  </div><!--/row-->
-</div> <!-- /container -->
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <%= bootstrap_flash %>
+          <%= yield %>
+        </div>
+      </div><!--/row-->
+    </div> <!-- /container -->
 
-</body>
+  </body>
 </html>
