--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <div class="navbar-inner">
           <div class="container">
             <a class="brand" href="/">VersionKeeper</a>
-            <button type="button" class="btn btn-default"><a href="https://github.com/adamgeorgeson/versionkeeper/issues">Request a change?</a></button>
+            <a href="https://github.com/adamgeorgeson/versionkeeper/issues" class="btn btn-default">Request a change?</a>
             <ul class="nav pull-right">
             </ul>
           </div>
