--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,10 @@
         <div class="navbar-inner">
           <div class="container">
             <a class="brand" href="/">VersionKeeper</a>
-            <a href="https://github.com/adamgeorgeson/versionkeeper/issues" class="btn btn-default">Request a change?</a>
-            <ul class="nav pull-right">
+            <ul class="nav">
+              <li><a href="https://uk-provisioner.sageone.biz/provision">UKIE UAT Provisioner</a></li>
+              <li><a href="https://guides.platform.sageone.com">Platform Guides</a></li>
+              <li><a href="https://github.com/adamgeorgeson/versionkeeper/issues">Request a change?</a></li>
             </ul>
           </div>
         </div>
