--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -13,19 +13,19 @@
       <dt><strong><%= I18n.t('releases.status') %>:</strong></dt>
       <dd><%= @release.status %></dd>
       <dt><strong><%= I18n.t('app.mysageone') %>:</strong></dt>
-      <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %></dd>
+      <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('mysageone_uk', Release.version('mysageone', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.accounts') %>:</strong></dt>
-      <dd <%= @release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @release) %></dd>
+      <dd <%= @release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_accounts_uk', Release.version('accounts', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.accounts_extra') %>:</strong></dt>
-      <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %></dd>
+      <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_advanced', Release.version('accounts_extra', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.payroll') %>:</strong></dt>
-      <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %></dd>
+      <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_payroll_ukie', Release.version('payroll', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.addons') %>:</strong></dt>
-      <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %></dd>
+      <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_addons_uk', Release.version('addons', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.collaborate') %>:</strong></dt>
-      <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %></dd>
+      <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('chorizo', Release.version('collaborate', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.help') %>:</strong></dt>
-      <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %></dd>
+      <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sageone_help_uk', Release.version('help', @release)) %></span></dd>
     </dl>
   </div>
   <div class="span9">
