specs and minor view changes

--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -5,45 +5,48 @@
 </div>
 <% if @releases.present? %>
   <table class="table table-hover">
-  <thead>
-    <tr>
-      <th><%= I18n.t('releases.date') %></th>
-      <th><%= I18n.t('app.mysageone') %></th>
-      <th><%= I18n.t('app.accounts') %></th>
-      <th><%= I18n.t('app.accounts_extra') %></th>
-      <th><%= I18n.t('app.payroll') %></th>
-      <th><%= I18n.t('app.addons') %></th>
-      <th><%= I18n.t('app.collaborate') %></th>
-      <th><%= I18n.t('app.help') %></th>
-      <th><%= I18n.t('releases.status') %></th>
-      <th width="150px"><%= I18n.t('releases.coordinator') %></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @releases.each do |release| %>
-    <tr data-link='<%= release_path(release) %>' class = "table_data <%= if release == @next_release then "next_release" end %>">
-      <td><%= release.date %></td>
-      <td class="<%= release.mysageone.present? ? "new-version" : "previous-version" %>"><%= Release.version('mysageone', release) %></td>
-      <td class="<%= release.accounts.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts', release) %></td>
-      <td class="<%= release.accounts_extra.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts_extra', release) %></td>
-      <td class="<%= release.payroll.present? ? "new-version" : "previous-version" %>"><%= Release.version('payroll', release) %></td>
-      <td class="<%= release.addons.present? ? "new-version" : "previous-version" %>"><%= Release.version('addons', release) %></td>
-      <td class="<%= release.collaborate.present? ? "new-version" : "previous-version" %>"><%= Release.version('collaborate', release) %></td>
-      <td class="<%= release.help.present? ? "new-version" : "previous-version" %>"><%= Release.version('help', release) %></td>
-      <td><%= ['UAT','Pre-Prod'].include?(release.status) && release.date < Date.today ? release.status + "?" : release.status %></td>
-      <td><%= release.coordinator %></td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
+    <thead>
+      <tr>
+        <th><%= I18n.t('releases.date') %></th>
+        <th><%= I18n.t('app.mysageone') %></th>
+        <th><%= I18n.t('app.accounts') %></th>
+        <th><%= I18n.t('app.accounts_extra') %></th>
+        <th><%= I18n.t('app.payroll') %></th>
+        <th><%= I18n.t('app.addons') %></th>
+        <th><%= I18n.t('app.collaborate') %></th>
+        <th><%= I18n.t('app.help') %></th>
+        <th><%= I18n.t('releases.status') %></th>
+        <th width="150px"><%= I18n.t('releases.coordinator') %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @releases.each do |release| %>
+        <tr data-link='<%= release_path(release) %>' class = "table_data <%= if release == @next_release then "next_release" end %>">
+          <td><%= release.date %></td>
+          <td class="<%= release.mysageone.present? ? "new-version" : "previous-version" %>"><%= Release.version('mysageone', release) %></td>
+          <td class="<%= release.accounts.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts', release) %></td>
+          <td class="<%= release.accounts_extra.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts_extra', release) %></td>
+          <td class="<%= release.payroll.present? ? "new-version" : "previous-version" %>"><%= Release.version('payroll', release) %></td>
+          <td class="<%= release.addons.present? ? "new-version" : "previous-version" %>"><%= Release.version('addons', release) %></td>
+          <td class="<%= release.collaborate.present? ? "new-version" : "previous-version" %>"><%= Release.version('collaborate', release) %></td>
+          <td class="<%= release.help.present? ? "new-version" : "previous-version" %>"><%= Release.version('help', release) %></td>
+          <td><%= ['UAT','Pre-Prod'].include?(release.status) && release.date < Date.today ? release.status + "?" : release.status %></td>
+          <td><%= release.coordinator %></td>
+          <td><%= link_to t('.edit', :default => t("helpers.links.edit")),
+            edit_release_path(release), :class => 'btn btn-mini' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% else %>
   <p><%= I18n.t('releases.empty') %></p>
 <% end %>
 <div class='form-actions'>
-<%= link_to t('.new', :default => t("helpers.links.new")),
-  new_release_path,
-  :class => 'btn btn-primary' %>
-</div>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+    new_release_path,
+    :class => 'btn btn-primary' %>
+  </div>
 
-<center><%= paginate @releases, :html_options => {:class => "pagination"} %></center>
+  <center><%= paginate @releases, :html_options => {:class => "pagination"} %></center>
 
