--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -30,11 +30,12 @@
   </div>
   <div class="span9">
     <div class="notes">
-    <%= @release.notes.present? ? markdown(@release.notes) : "There are no notes for this release. Check back later." %>
-  </div>
-    <div class="notes">
       <%= markdown(@release_notes) %>
-  </div>
+    </div></br>
+
+    <div class="notes">
+      <%= @release.notes.present? ? markdown(@release.notes) : "There are no notes for this release. Check back later." %>
+    </div>
   </div>
 </div>
 <div class="form-actions">
