--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -2,6 +2,9 @@
 <div class="page-header">
   <h1><%=t '.title', :default => 'Sage One UKIE ' + model_class.model_name.human.pluralize.titleize  %></h1>
   <p><%= I18n.t('releases.index') %></p>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+    new_release_path,
+    :class => 'btn btn-primary' %>
 </div>
 <% if @releases.present? %>
   <table class="table table-hover">
@@ -14,6 +17,8 @@
         <th><%= I18n.t('app.payroll') %></th>
         <th><%= I18n.t('app.addons') %></th>
         <th><%= I18n.t('app.collaborate') %></th>
+        <th><%= I18n.t('app.accountant_edition') %></th>
+        <th><%= I18n.t('app.accounts_production') %></th>
         <th><%= I18n.t('app.help') %></th>
         <th><%= I18n.t('releases.status') %></th>
         <th width="150px"><%= I18n.t('releases.coordinator') %></th>
@@ -29,12 +34,19 @@
           <td class="<%= release.payroll.present? ? "new-version" : "previous-version" %>"><%= Release.version('payroll', release) %></td>
           <td class="<%= release.addons.present? ? "new-version" : "previous-version" %>"><%= Release.version('addons', release) %></td>
           <td class="<%= release.collaborate.present? ? "new-version" : "previous-version" %>"><%= Release.version('collaborate', release) %></td>
+          <td class="<%= release.accountant_edition.present? ? "new-version" : "previous-version" %>"><%= Release.version('accountant_edition', release) %></td>
+          <td class="<%= release.accounts_production.present? ? "new-version" : "previous-version" %>"><%= Release.version('accounts_production', release) %></td>
           <td class="<%= release.help.present? ? "new-version" : "previous-version" %>"><%= Release.version('help', release) %></td>
           <td><%= ['UAT','Pre-Prod'].include?(release.status) && release.date < Date.today ? release.status + "?" : release.status %></td>
           <td><%= release.coordinator %></td>
           <td><%= link_to t('.edit', :default => t("helpers.links.edit")),
             edit_release_path(release), :class => 'btn btn-mini' %>
-          </td>
+            <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              release_path(release),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger btn-mini' %>
+            </td>
         </tr>
       <% end %>
     </tbody>
@@ -42,11 +54,6 @@
 <% else %>
   <p><%= I18n.t('releases.empty') %></p>
 <% end %>
-<div class='form-actions'>
-  <%= link_to t('.new', :default => t("helpers.links.new")),
-    new_release_path,
-    :class => 'btn btn-primary' %>
-  </div>
 
-  <center><%= paginate @releases, :html_options => {:class => "pagination"} %></center>
+<center><%= paginate @releases, :html_options => {:class => "pagination"} %></center>
 
