--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -1,9 +1,18 @@
 <%- model_class = Release -%>
 <div class="page-header">
   <h1><%=t '.title', :default => @release.date %></h1>
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+    releases_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+    edit_release_path(@release), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+    release_path(@release),
+    :method => 'delete',
+    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+    :class => 'btn btn-danger' %>
 </div>
 
-<div class="row">
+<div class="row-fluid">
   <div class="span3">
     <dl class="dl-horizontal-left">
       <dt><strong><%= I18n.t('releases.date') %>:</strong></dt>
@@ -24,6 +33,10 @@
       <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_addons_uk', Release.version('addons', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.collaborate') %>:</strong></dt>
       <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %> <span class = "label label-info"></span></dd>
+      <dt><strong><%= I18n.t('app.accountant_edition') %>:</strong></dt>
+      <dd <%= @release.accountant_edition.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accountant_edition', @release) %> <span class = "label label-info"></span></dd>
+      <dt><strong><%= I18n.t('app.accounts_production') %>:</strong></dt>
+      <dd <%= @release.accounts_production.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_production', @release) %> <span class = "label label-info"></span></dd>
       <dt><strong><%= I18n.t('app.help') %>:</strong></dt>
       <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %> <span class = "label label-info"></span></dd>
     </dl>
@@ -37,15 +50,4 @@
       <%= @release.notes.present? ? markdown(@release.notes) : "There are no notes for this release. Check back later." %>
     </div>
   </div>
-</div>
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-    releases_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-    edit_release_path(@release), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-    release_path(@release),
-    :method => 'delete',
-    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-    :class => 'btn btn-danger' %>
 </div>
