--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,16 @@
           <div class="container-fluid">
             <a class="brand" href="/">VersionKeeper</a>
             <ul class="nav">
-              <li><a href="https://uk-provisioner.sageone.biz/provision">UKIE UAT Provisioner</a></li>
-              <li><a href="http://guides.platform.sageone.com">Platform Guides</a></li>
-              <li><a href="https://github.com/adamgeorgeson/versionkeeper/issues">Request a change?</a></li>
+              <li><a href="https://uk-provisioner.sageone.biz/provision" target='#'>UKIE UAT Provisioner</a></li>
+              <li><a href="http://compendium.platform.sageone.com" target='#'>Compendium</a></li>
+              <li><a href="https://github.com/adamgeorgeson/versionkeeper/issues" target='#'>Request a change?</a></li>
             </ul>
+            <form class="form-search navbar-form" role="search">
+              <div class="input-append">
+                <input type="text" name='q' class="span2 search-query" placeholder='Search'>
+                <button type="submit" class="btn"><i class="icon-search"></i></button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
