--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <li><a href="http://compendium.platform.sageone.com" target='#'>Compendium</a></li>
               <li><a href="https://github.com/adamgeorgeson/versionkeeper/issues" target='#'>Request a change?</a></li>
             </ul>
-            <form class="form-search navbar-form" role="search">
+            <form class="form-search navbar-form" role="search" action="/releases">
               <div class="input-append">
                 <input type="text" name='q' class="span2 search-query" placeholder='Search'>
                 <button type="submit" class="btn"><i class="icon-search"></i></button>
