--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -22,21 +22,22 @@
       <dt><strong><%= I18n.t('releases.status') %>:</strong></dt>
       <dd><%= @release.status %></dd>
       <dt><strong><%= I18n.t('app.mysageone') %>:</strong></dt>
-      <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('mysageone_uk', Release.version('mysageone', @release)) %></span></dd>
+      <dd <%= @release.mysageone.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('mysageone', @release) %>
+    <span class = "label label-info">SOP <%= Release.sop_version('mysageone_uk', Release.version('mysageone', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.accounts') %>:</strong></dt>
       <dd <%= @release.accounts.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts', @release) %> <span class = "label label-info"></span></dd>
       <dt><strong><%= I18n.t('app.accounts_extra') %>:</strong></dt>
-      <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_advanced', Release.version('accounts_extra', @release)) %></span></dd>
+      <dd <%= @release.accounts_extra.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_extra', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_gac_uki', Release.version('accounts_extra', @release)) %></span> <span class = "label label-info">GAC <%= Release.gac_version('sage_one_gac_uki', Release.version('accounts_extra', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.payroll') %>:</strong></dt>
-      <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %> <span class = "label label-info"></span></dd>
+      <dd <%= @release.payroll.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('payroll', @release) %></dd>
       <dt><strong><%= I18n.t('app.addons') %>:</strong></dt>
-      <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_addons_uk', Release.version('addons', @release)) %></span></dd>
+      <dd <%= @release.addons.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('addons', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('sage_one_addons_uk', Release.version('addons', @release)) %></span> <span class = "label label-info">SOPA <%= Release.sopa_version('sage_one_addons_uk', Release.version('addons', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.collaborate') %>:</strong></dt>
-      <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %> <span class = "label label-info"></span></dd>
+      <dd <%= @release.collaborate.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('collaborate', @release) %> <span class = "label label-info"></span> <span class = "label label-info">SOP <%= Release.sop_version('chorizo', Release.version('collaborate', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.accountant_edition') %>:</strong></dt>
-      <dd <%= @release.accountant_edition.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accountant_edition', @release) %> <span class = "label label-info"></span></dd>
+      <dd <%= @release.accountant_edition.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accountant_edition', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('new_accountant_edition', Release.version('accountant_edition', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.accounts_production') %>:</strong></dt>
-      <dd <%= @release.accounts_production.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_production', @release) %> <span class = "label label-info"></span></dd>
+      <dd <%= @release.accounts_production.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('accounts_production', @release) %> <span class = "label label-info">SOP <%= Release.sop_version('accounts_production', Release.version('accounts_production', @release)) %></span></dd>
       <dt><strong><%= I18n.t('app.help') %>:</strong></dt>
       <dd <%= @release.help.present? ? "class = new-version" : "class = previous-version" %>><%= Release.version('help', @release) %> <span class = "label label-info"></span></dd>
     </dl>
