add ct online to product suite

--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -12,6 +12,7 @@
   <%= f.input :collaborate, :placeholder =>  placeholder('collaborate') %>
   <%= f.input :accountant_edition, :placeholder =>  placeholder('accountant_edition') %>
   <%= f.input :accounts_production, :placeholder =>  placeholder('accounts_production') %>
+  <%= f.input :sageone_corp_tax_uk, label: I18n.t('app.sageone_corp_tax_uk'), :placeholder =>  placeholder('sageone_corp_tax_uk') %>
   <%= f.input :help, :placeholder =>  placeholder('help') %>
     </div>
     <div class="span7">
