--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -22,6 +22,7 @@
             <th><%= I18n.t('app.collaborate') %></th>
             <th><%= I18n.t('app.accountant_edition') %></th>
             <th><%= I18n.t('app.accounts_production') %></th>
+            <th><%= I18n.t('app.sageone_corp_tax_uk') %></th>
             <th><%= I18n.t('app.help') %></th>
             <th><%= I18n.t('releases.status') %></th>
             <th width="150px"><%= I18n.t('releases.coordinator') %></th>
